--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^17.2.0",
     "@angular/google-maps": "^18.0.0",
     "@angular/material": "^18.0.0",
@@ -24,6 +25,7 @@
     "@capacitor/cli": "^6.0.0",
     "@capacitor/core": "^6.0.0",
     "@maptiler/sdk": "^2.0.3",
+    "firebase": "^10.12.2",
     "leaflet": "^1.9.4",
     "ol": "^9.2.4",
     "rxjs": "~7.8.0",
